spacing fixed

--- a/Website/assets/scss/includes/_about.scss
+++ b/Website/assets/scss/includes/_about.scss
@@ -134,39 +134,39 @@
             }
     
             &.youtube {
-                top: 100px;
-                left: 550px;
+                top: 80px;
+                left: 500px;
     
     
-                background-image: url("index/Website/assets/images/about/youtube.png");
+                background-image: url("/Website/assets/images/about/youtube.png");
                 background-size: contain;
     
             }
     
             &.facebook {
-                bottom: 100px;
-                left: 550px;
+                bottom: 80px;
+                left: 500px;
     
-                background-image: url("index/Website/assets/images/about/facebook.png");
+                background-image: url("/Website/assets/images/about/facebook.png");
                 background-size: 150px;
     
             }
     
             &.instagram {
-                bottom: 100px;
-                right: 550px;
+                bottom: 80px;
+                right: 500px;
     
-                background-image: url("index/Website/assets/images/about/instagram.png");
+                background-image: url("/Website/assets/images/about/instagram.png");
                 background-size: 100px;
     
             }
     
             &.tiktok {
-                top: 100px;
-                right: 550px;
+                top: 80px;
+                right: 500px;
     
     
-                background-image: url("index/Website/assets/images/about/tiktok.png");
+                background-image: url("/Website/assets/images/about/tiktok.png");
                 background-size: contain;
     
             }
