--- a/Website/assets/scss/main.css
+++ b/Website/assets/scss/main.css
@@ -478,30 +478,30 @@ header label .hamburger span:last-of-type {
 }
 
 #about .social-media-icons .icon.youtube {
-  top: 100px;
-  left: 550px;
-  background-image: url("index/Website/assets/images/about/youtube.png");
+  top: 80px;
+  left: 500px;
+  background-image: url("/Website/assets/images/about/youtube.png");
   background-size: contain;
 }
 
 #about .social-media-icons .icon.facebook {
-  bottom: 100px;
-  left: 550px;
-  background-image: url("index/Website/assets/images/about/facebook.png");
+  bottom: 80px;
+  left: 500px;
+  background-image: url("/Website/assets/images/about/facebook.png");
   background-size: 150px;
 }
 
 #about .social-media-icons .icon.instagram {
-  bottom: 100px;
-  right: 550px;
-  background-image: url("index/Website/assets/images/about/instagram.png");
+  bottom: 80px;
+  right: 500px;
+  background-image: url("/Website/assets/images/about/instagram.png");
   background-size: 100px;
 }
 
 #about .social-media-icons .icon.tiktok {
-  top: 100px;
-  right: 550px;
-  background-image: url("index/Website/assets/images/about/tiktok.png");
+  top: 80px;
+  right: 500px;
+  background-image: url("/Website/assets/images/about/tiktok.png");
   background-size: contain;
 }
 
